--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,8 +6,6 @@ setup: true
 
 orbs:
   pocket: pocket/circleci-orbs@2.1.1
-  backstage-entity-validator: roadiehq/backstage-entity-validator@0.4.2
-  aws-cli: circleci/aws-cli@1.2.1
 
 # Workflow shortcuts
 not_main: &not_main
@@ -54,7 +52,6 @@ jobs:
       - image: cimg/node:18.16
     steps:
       - checkout
-      # Define the working directory for this job
       - attach_workspace:
           at: /tmp/workspace
       - run:
@@ -65,122 +62,131 @@ jobs:
           command: |
             export NODE_ENV=production
             npm run build
-      # Copy built files to app_prod folder
       - run:
           name: Setup workspace
           command: |
             mkdir -p /tmp/workspace/app_prod
             cp -r ./node_modules package.json ./dist /tmp/workspace/app_prod
-      # Persist built files to workspace
       - persist_to_workspace:
           root: /tmp/workspace
           paths:
             - app_prod
-  run_code_build:
-    description: run codebuild to apply infrastructure
+
+  tf:
+    description: "perform terraform commands on self-hosted runners"
     parameters:
-      env_lower_name:
+      action:
+        default: validate
         type: string
-        description: The lower case env name
-      env_capital_name:
-        description: The env capital name
+      node_env:
+        default: "production"
         type: string
-      codebuild_project_name:
+      resource_class:
+        default: "pocket/default-prod"
         type: string
-        description: The CodeBuild project name
-        default: ""
-      codebuild_project_branch:
+      tf_workspace:
+        default: "Prod"
         type: string
-        description: The git branch to build
-        default: ""
-      deploy:
-        type: boolean
-        default: false
-    docker:
-      - image: cimg/node:18.16
-        auth:
-          username: $DOCKERHUB_USERNAME
-          password: $DOCKERHUB_PASSWORD
+    environment:
+      TF_WORKSPACE: << parameters.tf_workspace >>
+    machine: true
+    resource_class: << parameters.resource_class >>
     steps:
-      - aws-cli/setup:
-          aws-access-key-id: << parameters.env_capital_name >>_AWS_ACCESS_KEY
-          aws-secret-access-key: << parameters.env_capital_name >>_AWS_SECRET_ACCESS_KEY
-          aws-region: << parameters.env_capital_name >>_AWS_DEFAULT_REGION
-      - run:
-          name: Setup CodeBuild environment variables
+      - checkout
+      - attach_workspace:
+          at: /tmp/workspace
+      - run: 
+          name: Terraform Setup
           command: |
-            { \
-            echo 'export CODEBUILD_PROJECT_NAME="<< parameters.codebuild_project_name >>"'; \
-            echo 'export CODEBUILD_PROJECT_BRANCH="<< parameters.codebuild_project_branch >>"'; \
-            } >> "$BASH_ENV"
+            . /home/circleci/.codebuild_shims_wrapper.sh
+            cd .aws
+            nvm install
+            npm ci
+            tfenv install
+            export NODE_ENV=<< parameters.node_env >>
+            npm run synth
       - run:
-          name: Run CodeBuild
+          name: Terraform Cloud Login
           command: |
-            echo -e "Starting CodeBuild for ${CODEBUILD_PROJECT_NAME}.\n"
-            BUILD_ID=$(aws codebuild start-build --project-name "$CODEBUILD_PROJECT_NAME" --environment-variables-override name=GIT_BRANCH,value="$CODEBUILD_PROJECT_BRANCH" --source-version "$CODEBUILD_PROJECT_BRANCH" --query 'build.id' --output text)
-            BUILD_STATUS="IN_PROGRESS"
-            # Wait for the CodeBuild to complete.
-            while [ "$BUILD_STATUS" == "IN_PROGRESS" ]; do
-              sleep 10
-              echo "Checking build status"
-              BUILD_STATUS=$(aws codebuild batch-get-builds --ids "$BUILD_ID" --query 'builds[0].buildStatus' --output text)
-              if [ "$BUILD_STATUS" == "IN_PROGRESS" ]; then
-                echo -e "Build is ${BUILD_STATUS}, waiting for build to complete...waiting for 10 seconds before next check...\n"
-              fi
-            done
-            if [ "$BUILD_STATUS" != "SUCCEEDED" ]; then
-              echo "CodeBuild failed to succeed with status ${BUILD_STATUS}"
-              exit 1
-            else
-              echo -e "CodeBuild succeeded\n"
-            fi
-      - store_artifacts:
-          path: /tmp/build.zip
+            rc="credentials \"app.terraform.io\" { ${rc} token=\"$TERRAFORM_TOKEN\" ${rc}}"
+            echo "$rc" > ~/.terraformrc
+            echo "//npm.pkg.github.com/:_authToken=${GITHUB_ACCESS_TOKEN}" > ~/.npmrc
+      - when: 
+          condition: 
+            equal: ["apply", << parameters.action >>]
+          steps:
+            - run:
+                name: Terraform Apply
+                command: |
+                  cd .aws/cdktf.out/stacks/syntheticchecks
+                  terraform init
+                  terraform apply -auto-approve
+      - when: 
+          condition: 
+            equal: ["plan", << parameters.action >>]
+          steps:
+            - run:
+                name: Terraform Plan
+                command: |
+                  cd .aws/cdktf.out/stacks/syntheticchecks
+                  terraform init
+                  terraform plan -lock=false
+      - when: 
+          condition: 
+            equal: ["validate", << parameters.action >>]
+          steps:
+            - run:
+                name: Terraform Validate (no state)
+                command: |
+                  cd .aws/cdktf.out/stacks/syntheticchecks
+                  terraform init --backend=false
+                  terraform validate
+
   upload_zip_to_s3:
-    description: upload zip file to S3
+    description: "upload zip file to S3"
     parameters:
-      env_lower_name:
+      env_lower:
         type: string
         description: The lower case env name
-      env_capital_name:
-        description: The env capital name
+      resource_class:
+        default: "pocket/default-prod"
         type: string
-    docker:
-      - image: cimg/node:18.16
-        auth:
-          username: $DOCKERHUB_USERNAME
-          password: $DOCKERHUB_PASSWORD
+    machine: true
+    resource_class: << parameters.resource_class >>
     steps:
       - checkout
       - run:
           name: create zip file
           command: |
+            nvm install
             npm ci
             npm run build
             npm run zip
-      - aws-cli/setup:
-          aws-access-key-id: << parameters.env_capital_name >>_AWS_ACCESS_KEY
-          aws-secret-access-key: << parameters.env_capital_name >>_AWS_SECRET_ACCESS_KEY
-          aws-region: << parameters.env_capital_name >>_AWS_DEFAULT_REGION
       - run:
           name: upload zip file to S3 bucket
           command: |
             cd tmp-dist/synthetics-export
-            aws s3 cp "aws-synthetic.zip" s3://pocket-syntheticchecks-dev
+            aws s3 cp "aws-synthetic.zip" s3://pocket-syntheticchecks-<< parameters.env_lower >>
 
 workflows:
   all:
     jobs:
+      # CI
       - build
-      # Prod
-      - pocket/setup_deploy_params:
-          <<: *only_main
-          name: setup-deploy-params-prod
-          aws_access_key_id: Prod_AWS_ACCESS_KEY
-          aws_secret_access_key: Prod_AWS_SECRET_ACCESS_KEY
-          context: pocket
-          env: Prod
-          service_name: ${SERVICE_NAME}
+
+      - tf:
+          <<: *not_dev_main
+          action: validate
+          name: tf_validate_dev
+          node_env: development
+          resource_class: pocket/default-dev
+          tf_workspace: Dev
+
+      - tf:
+          <<: *not_dev_main
+          action: validate
+          name: tf_validate_prod
+
       # Dev
       - pocket/setup_deploy_params:
           <<: *only_dev
@@ -191,31 +197,70 @@ workflows:
           env: Dev
           service_name: ${SERVICE_NAME}
 
-      # - run_code_build:
-      #     <<: *only_dev
-      #     context: pocket
-      #     name: run_dev_code_build
-      #     codebuild_project_name: SyntheticChecks-Dev
-      #     codebuild_project_branch: dev
-      #     env_lower_name: dev
-      #     env_capital_name: Dev
-
-      - run_code_build:
-          <<: *only_main
+      - tf:
+          <<: *not_dev_main
+          action: plan
           context: pocket
-          name: run_prod_code_build
-          codebuild_project_name: SyntheticChecks-Prod
-          codebuild_project_branch: main
-          env_lower_name: prod
-          env_capital_name: Prod
+          name: tf_plan_dev
+          node_env: development
+          requires:
+            - tf_validate_dev
+          resource_class: pocket/default-dev
+          tf_workspace: Dev
+
+      - tf:
+          <<: *only_dev
+          action: apply
+          context: pocket
+          name: tf_apply_dev
+          node_env: development
+          requires:
+            - tf_plan_dev
+          resource_class: pocket/default-dev
+          tf_workspace: Dev
 
       - upload_zip_to_s3:
           <<: *only_dev
+          context: pocket
+          env_lower: dev
+          name: upload_zip_to_s3_dev
           requires:
             - build
             - setup-deploy-params-dev
-            # - run_dev_code_build
+            - tf_apply_dev
+
+      # Prod
+      - pocket/setup_deploy_params:
+          <<: *only_main
+          aws_access_key_id: Prod_AWS_ACCESS_KEY
+          aws_secret_access_key: Prod_AWS_SECRET_ACCESS_KEY
           context: pocket
-          name: upload_zip_to_s3_dev
-          env_lower_name: dev
-          env_capital_name: Dev
+          env: Prod
+          name: setup-deploy-params-prod
+          service_name: ${SERVICE_NAME}
+
+      - tf:
+          <<: *not_dev_main
+          action: plan
+          context: pocket
+          name: tf_plan_prod
+          requires:
+            - tf_validate_prod
+
+      - tf:
+          <<: *only_main
+          action: apply
+          context: pocket
+          name: tf_apply_prod
+          requires:
+            - tf_plan_prod
+
+      - upload_zip_to_s3:
+          <<: *only_main
+          context: pocket
+          env_lower: prod
+          name: upload_zip_to_s3_prod
+          requires:
+            - build
+            - setup-deploy-params-prod
+            - tf_apply_prod
