--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -157,7 +157,7 @@ jobs:
           command: |
             npm ci
             npm run build
-            rm -rf tmp-dist/synthetics-export && mkdir -p tmp-dist/synthetics-export/nodejs && cp -r dist/nodejs/node_modules/ tmp-dist/synthetics-export/nodejs/node_modules &&  cd tmp-dist/synthetics-export && zip "aws-synthetic-<< parameters.env_lower_name >>.zip" -r nodejs
+            rm -rf tmp-dist/synthetics-export && mkdir -p tmp-dist/synthetics-export/nodejs && cp -r dist/nodejs/node_modules/ tmp-dist/synthetics-export/nodejs/node_modules &&  cd tmp-dist/synthetics-export && zip "$CIRCLE_SHA1-aws-synthetic-<< parameters.env_lower_name >>.zip" -r nodejs
       - aws-cli/setup:
           aws-access-key-id: << parameters.env_capital_name >>_AWS_ACCESS_KEY
           aws-secret-access-key: << parameters.env_capital_name >>_AWS_SECRET_ACCESS_KEY
@@ -166,7 +166,7 @@ jobs:
           name: upload zip file to S3 bucket
           command: |
             cd tmp-dist/synthetics-export
-            aws s3 cp "aws-synthetic-<< parameters.env_lower_name >>.zip" s3://pocket-syntheticchecks-dev
+            aws s3 cp "$CIRCLE_SHA1-aws-synthetic-<< parameters.env_lower_name >>.zip" s3://pocket-syntheticchecks-dev
 
 workflows:
   all:
@@ -190,16 +190,16 @@ workflows:
           context: pocket
           env: Dev
           service_name: ${SERVICE_NAME}
-
-      # - run_code_build:
-      #     <<: *only_dev
-      #     context: pocket
-      #     name: run_dev_code_build
-      #     codebuild_project_name: SyntheticChecks-Dev
-      #     codebuild_project_branch: dev
-      #     env_lower_name: dev
-      #     env_capital_name: Dev
-
+      # Dev
+      - run_code_build:
+          <<: *only_dev
+          context: pocket
+          name: run_dev_code_build
+          codebuild_project_name: SyntheticChecks-Dev
+          codebuild_project_branch: dev
+          env_lower_name: dev
+          env_capital_name: Dev
+      # Prod
       - run_code_build:
           <<: *only_main
           context: pocket
@@ -208,14 +208,25 @@ workflows:
           codebuild_project_branch: main
           env_lower_name: prod
           env_capital_name: Prod
-
+      # Dev
       - upload_zip_to_s3:
           <<: *only_dev
           requires:
             - build
             - setup-deploy-params-dev
-            # - run_dev_code_build
+            - run_dev_code_build
           context: pocket
           name: upload_zip_to_s3_dev
           env_lower_name: dev
           env_capital_name: Dev
+      # Prod
+      - upload_zip_to_s3:
+          <<: *only_main
+          requires:
+            - build
+            - setup-deploy-params-prod
+            - run_prod_code_build
+          context: pocket
+          name: upload_zip_to_s3_prod
+          env_lower_name: prod
+          env_capital_name: Prod
